--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Dashboard Termitas</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
-      background-color: #e0e0e0; /* fondo gris claro */
+      background-color: #e0e0e0;
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 20px;
@@ -46,10 +47,15 @@
       color: #555;
       margin-bottom: 10px;
     }
+    .mini-grafico {
+      width: 80px;
+      height: 80px;
+      margin-bottom: 5px;
+    }
     .variables {
-      font-size: 0.9em;
+      font-size: 0.85em;
       color: #333;
-      margin-bottom: 10px;
+      margin-bottom: 5px;
       text-align: center;
     }
     .alerta {
@@ -61,6 +67,7 @@
       display: none;
       text-align: center;
       width: 100%;
+      margin-top: 5px;
     }
     @media(max-width: 1200px) { .grid-sondas { grid-template-columns: repeat(4, 1fr); } }
     @media(max-width: 992px) { .grid-sondas { grid-template-columns: repeat(3, 1fr); } }
@@ -70,20 +77,20 @@
 </head>
 <body>
   <h1>Dashboard Termitas</h1>
-  <div class="grid-sondas" id="gridSondas">
-    <!-- Bloques de sondas se generarán dinámicamente -->
-  </div>
+  <div class="grid-sondas" id="gridSondas"></div>
 
   <script>
     const totalSondas = 20;
     const grid = document.getElementById('gridSondas');
     let sondaSeleccionada = null;
+    const chartsTemp = [];
+    const chartsHum = [];
 
     // Valores de prueba por defecto
     const valoresPrueba = Array.from({length: totalSondas}, (_, i) => ({
-      Temperatura_C: Math.floor(Math.random() * 10 + 20), // 20-29°C
-      Humedad_%: Math.floor(Math.random() * 30 + 40),     // 40-70%
-      Distancia_mm: Math.floor(Math.random() * 20 + 25)   // 25-44 mm
+      Temperatura_C: Math.floor(Math.random() * 10 + 20),
+      Humedad_%: Math.floor(Math.random() * 30 + 40),
+      Distancia_mm: Math.floor(Math.random() * 20 + 25)
     }));
 
     // Crear bloques de sondas
@@ -93,9 +100,9 @@
       sondaDiv.id = `sonda-${i}`;
       sondaDiv.innerHTML = `
         <h2>Sonda ${i}</h2>
+        <canvas id="tempChart-${i}" class="mini-grafico"></canvas>
+        <canvas id="humChart-${i}" class="mini-grafico"></canvas>
         <div class="variables">
-          Temperatura: <span id="temp-${i}">${valoresPrueba[i-1].Temperatura_C}</span> °C<br>
-          Humedad: <span id="hum-${i}">${valoresPrueba[i-1].Humedad_%}</span> %<br>
           Distancia: <span id="dist-${i}">${valoresPrueba[i-1].Distancia_mm}</span> mm
         </div>
         <div class="alerta" id="alerta-${i}" style="display: ${valoresPrueba[i-1].Distancia_mm > 30 ? 'block' : 'none'}">
@@ -109,9 +116,32 @@
         sondaSeleccionada = sondaDiv;
       });
       grid.appendChild(sondaDiv);
+
+      // Inicializar gráficos
+      const ctxTemp = document.getElementById(`tempChart-${i}`).getContext('2d');
+      const tempChart = new Chart(ctxTemp, {
+        type: 'doughnut',
+        data: {
+          labels: ['Temp','Resto'],
+          datasets: [{ data: [valoresPrueba[i-1].Temperatura_C, 50], backgroundColor: ['#ff6384','#eee'], borderWidth:0 }]
+        },
+        options: { cutout: '70%', plugins:{legend:{display:false}}, rotation:-90, circumference:180 }
+      });
+      chartsTemp.push(tempChart);
+
+      const ctxHum = document.getElementById(`humChart-${i}`).getContext('2d');
+      const humChart = new Chart(ctxHum, {
+        type: 'doughnut',
+        data: {
+          labels: ['Hum','Resto'],
+          datasets: [{ data: [valoresPrueba[i-1].Humedad_%, 100 - valoresPrueba[i-1].Humedad_%], backgroundColor: ['#36a2eb','#eee'], borderWidth:0 }]
+        },
+        options: { cutout: '70%', plugins:{legend:{display:false}}, rotation:-90, circumference:180 }
+      });
+      chartsHum.push(humChart);
     }
 
-    // Función para actualizar datos reales desde data.json si existe
+    // Actualizar datos desde data.json
     async function actualizarDatos() {
       try {
         const response = await fetch('data/data.json');
@@ -119,24 +149,31 @@
         if(!data.sondas) return;
 
         data.sondas.forEach((sonda, index) => {
-          const i = index + 1;
-          document.getElementById(`temp-${i}`).innerText = sonda.Temperatura_C ?? '--';
-          document.getElementById(`hum-${i}`).innerText = sonda.Humedad_% ?? '--';
-          document.getElementById(`dist-${i}`).innerText = sonda.Distancia_mm ?? '--';
+          const i = index;
+          const temp = sonda.Temperatura_C ?? valoresPrueba[i].Temperatura_C;
+          const hum = sonda.Humedad_% ?? valoresPrueba[i].Humedad_%;
+          const dist = sonda.Distancia_mm ?? valoresPrueba[i].Distancia_mm;
 
-          const alertaDiv = document.getElementById(`alerta-${i}`);
-          if((sonda.Distancia_mm ?? 0) > 30){
-            alertaDiv.style.display = 'block';
-          } else {
-            alertaDiv.style.display = 'none';
-          }
+          // Actualizar gráficos
+          chartsTemp[i].data.datasets[0].data[0] = temp;
+          chartsTemp[i].data.datasets[0].data[1] = 50;
+          chartsTemp[i].update();
+
+          chartsHum[i].data.datasets[0].data[0] = hum;
+          chartsHum[i].data.datasets[0].data[1] = 100 - hum;
+          chartsHum[i].update();
+
+          document.getElementById(`dist-${i+1}`).innerText = dist;
+
+          // Alertas
+          const alertaDiv = document.getElementById(`alerta-${i+1}`);
+          alertaDiv.style.display = dist > 30 ? 'block' : 'none';
         });
       } catch (error) {
         console.warn('No se pudo leer data.json, usando valores de prueba');
       }
     }
 
-    // Actualiza cada 10s
     setInterval(actualizarDatos, 10000);
   </script>
 </body>
