--- a/index.html
+++ b/index.html
@@ -5,52 +5,52 @@
 <title>Dashboard Termitas</title>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <style>
-  body {
-    background-color: #f0f0f0;
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 20px;
-  }
-  h1 { text-align: center; color: #333; margin-bottom: 30px; }
-  .bloque {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    gap: 20px;
-    margin-bottom: 30px;
-  }
-  .sonda {
-    background-color: #fff;
-    border-radius: 12px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    transition: transform 0.3s, border 0.3s;
-    cursor: pointer;
-  }
-  .sonda:hover { transform: translateY(-5px); }
-  .sonda.seleccionada { border: 3px solid #007bff; }
-  .sonda h2 { margin: 0; font-size: 1.1em; color: #555; margin-bottom: 10px; text-align: center;}
-  canvas { width: 80px !important; height: 80px !important; margin-bottom: 5px; }
-  .valor {
-    font-size: 0.9em;
-    font-weight: bold;
-    color: #333;
-    text-align: center;
-    margin-bottom: 5px;
-  }
-  .alerta {
-    background-color: #ff4d4d;
-    color: #fff;
-    font-weight: bold;
-    padding: 5px 10px;
-    border-radius: 8px;
-    display: none;
-    text-align: center;
-    width: 100%;
-    margin-top: 5px;
-  }
+body {
+  background-color: #e0e0e0;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 20px;
+}
+h1 { text-align: center; color: #333; margin-bottom: 30px; }
+.bloque {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 20px;
+  margin-bottom: 30px;
+}
+.sonda {
+  background-color: #fff;
+  border-radius: 12px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: transform 0.3s, border 0.3s;
+  cursor: pointer;
+}
+.sonda:hover { transform: translateY(-5px); }
+.sonda.seleccionada { border: 3px solid #007bff; }
+.sonda h2 { margin:0; font-size:1.1em; color:#555; margin-bottom:10px; text-align:center; }
+canvas { width: 80px !important; height: 80px !important; margin-bottom:5px; }
+.valor {
+  font-size: 0.9em;
+  font-weight: bold;
+  color: #333;
+  text-align: center;
+  margin-bottom: 5px;
+}
+.alerta {
+  background-color: #ff4d4d;
+  color: #fff;
+  font-weight: bold;
+  padding: 5px 10px;
+  border-radius: 8px;
+  display: none;
+  text-align: center;
+  width: 100%;
+  margin-top: 5px;
+}
 </style>
 </head>
 <body>
@@ -61,17 +61,17 @@
 
 <script>
 const totalSondas = 20;
-const bloquesContainer = document.getElementById('bloques-container');
 const sondasPorBloque = 5;
+const bloquesContainer = document.getElementById('bloques-container');
 const chartsTemp = [];
 const chartsHum = [];
 let sondaSeleccionada = null;
 
-// Valores de prueba
+// Valores de prueba si data.json no existe
 const valoresPrueba = Array.from({length: totalSondas}, (_, i) => ({
-  Temperatura_C: Math.floor(Math.random()*10+20),
-  Humedad_pct: Math.floor(Math.random()*30+40),
-  Distancia_mm: Math.floor(Math.random()*20+25)
+  Temperatura_C: Math.floor(Math.random()*10+20), // 20-29°C
+  Humedad_pct: Math.floor(Math.random()*30+40),   // 40-70%
+  Distancia_mm: Math.floor(Math.random()*20+25)   // 25-44 mm
 }));
 
 // Crear bloques
@@ -94,6 +94,7 @@ for(let b=0; b<totalSondas/sondasPorBloque; b++){
         ¡Alerta de termitas!
       </div>
     `;
+    // Selección de bloque
     sondaDiv.addEventListener('click', ()=>{
       if(sondaSeleccionada) sondaSeleccionada.classList.remove('seleccionada');
       sondaDiv.classList.add('seleccionada');
@@ -101,12 +102,12 @@ for(let b=0; b<totalSondas/sondasPorBloque; b++){
     });
     bloqueDiv.appendChild(sondaDiv);
 
-    // Gráfico Temperatura con degradado verde->amarillo->rojo
+    // Gráfico Temperatura: degradado verde→amarillo→rojo
     const ctxTemp = document.getElementById(`tempChart-${sondaIndex}`).getContext('2d');
     const gradTemp = ctxTemp.createLinearGradient(0,0,0,80);
-    gradTemp.addColorStop(0,'#00ff00'); // verde
-    gradTemp.addColorStop(0.5,'#ffff00'); // amarillo
-    gradTemp.addColorStop(1,'#ff0000'); // rojo
+    gradTemp.addColorStop(0,'#00ff00');
+    gradTemp.addColorStop(0.5,'#ffff00');
+    gradTemp.addColorStop(1,'#ff0000');
     const tempChart = new Chart(ctxTemp,{
       type:'doughnut',
       data:{
@@ -132,7 +133,7 @@ for(let b=0; b<totalSondas/sondasPorBloque; b++){
   bloquesContainer.appendChild(bloqueDiv);
 }
 
-// Actualizar datos desde data.json
+// Función de actualización
 async function actualizarDatos(){
   try{
     const response = await fetch('data/data.json');
@@ -140,26 +141,28 @@ async function actualizarDatos(){
     if(!data.sondas) return;
 
     data.sondas.forEach((sonda,index)=>{
-      const i = index;
-      if(!sonda) return; // Si no hay datos, no mostrar nada
-      const temp = sonda.Temperatura_C ?? valoresPrueba[i].Temperatura_C;
-      const hum = sonda.Humedad_pct ?? valoresPrueba[i].Humedad_pct;
-      const dist = sonda.Distancia_mm ?? valoresPrueba[i].Distancia_mm;
+      if(!sonda) return;
+      const temp = sonda.Temperatura_C ?? valoresPrueba[index].Temperatura_C;
+      const hum = sonda.Humedad_pct ?? valoresPrueba[index].Humedad_pct;
+      const dist = sonda.Distancia_mm ?? valoresPrueba[index].Distancia_mm;
 
-      chartsTemp[i].data.datasets[0].data[0] = temp;
-      chartsTemp[i].update();
-      document.getElementById(`valorTemp-${i+1}`).innerText = temp+'°C';
+      chartsTemp[index].data.datasets[0].data[0] = temp;
+      chartsTemp[index].update();
+      document.getElementById(`valorTemp-${index+1}`).innerText = temp+'°C';
 
-      chartsHum[i].data.datasets[0].data[0] = hum;
-      chartsHum[i].update();
-      document.getElementById(`valorHum-${i+1}`).innerText = hum+'%';
+      chartsHum[index].data.datasets[0].data[0] = hum;
+      chartsHum[index].update();
+      document.getElementById(`valorHum-${index+1}`).innerText = hum+'%';
 
-      const alertaDiv = document.getElementById(`alerta-${i+1}`);
+      const alertaDiv = document.getElementById(`alerta-${index+1}`);
       alertaDiv.style.display = dist>30?'block':'none';
     });
-  }catch(e){ console.warn('No se pudo leer data.json, usando valores de prueba'); }
+  }catch(e){ 
+    console.warn('No se pudo leer data.json, usando valores de prueba'); 
+  }
 }
 
+// Actualiza cada 10s
 setInterval(actualizarDatos,10000);
 </script>
 
