--- a/index.html
+++ b/index.html
@@ -6,57 +6,60 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <style>
 body {
-  background-color: #e0e0e0;
+  background-color: #dcdcdc;
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 20px;
 }
-h1 { text-align: center; color: #333; margin-bottom: 30px; }
+h1 { text-align:center; color:#333; margin-bottom:30px; }
+
 .bloque {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 20px;
   margin-bottom: 30px;
 }
+
 .sonda {
-  background-color: #fff;
-  border-radius: 12px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-  padding: 15px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  background-color:#fff;
+  border-radius:12px;
+  box-shadow:0 4px 12px rgba(0,0,0,0.15);
+  padding:15px;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
   transition: transform 0.3s, border 0.3s;
-  cursor: pointer;
+  cursor:pointer;
 }
+
 .sonda:hover { transform: translateY(-5px); }
 .sonda.seleccionada { border: 3px solid #007bff; }
+
 .sonda h2 { margin:0; font-size:1.1em; color:#555; margin-bottom:10px; text-align:center; }
 canvas { width: 80px !important; height: 80px !important; margin-bottom:5px; }
 .valor {
   font-size: 0.9em;
   font-weight: bold;
   color: #333;
-  text-align: center;
-  margin-bottom: 5px;
+  text-align:center;
+  margin-bottom:5px;
 }
 .alerta {
-  background-color: #ff4d4d;
-  color: #fff;
-  font-weight: bold;
-  padding: 5px 10px;
-  border-radius: 8px;
-  display: none;
-  text-align: center;
-  width: 100%;
-  margin-top: 5px;
+  background-color:#ff4d4d;
+  color:#fff;
+  font-weight:bold;
+  padding:5px 10px;
+  border-radius:8px;
+  display:none;
+  text-align:center;
+  width:100%;
+  margin-top:5px;
 }
 </style>
 </head>
 <body>
 
 <h1>Dashboard Termitas</h1>
-
 <div id="bloques-container"></div>
 
 <script>
