--- a/index.html
+++ b/index.html
@@ -1,173 +1,188 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<title>Dashboard Termitas</title>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<style>
-body {
-  background-color: #dcdcdc;
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 20px;
-}
-h1 { text-align:center; color:#333; margin-bottom:30px; }
-
-.bloque {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  gap: 20px;
-  margin-bottom: 30px;
-}
-
-.sonda {
-  background-color:#fff;
-  border-radius:12px;
-  box-shadow:0 4px 12px rgba(0,0,0,0.15);
-  padding:15px;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  transition: transform 0.3s, border 0.3s;
-  cursor:pointer;
-}
-
-.sonda:hover { transform: translateY(-5px); }
-.sonda.seleccionada { border: 3px solid #007bff; }
-
-.sonda h2 { margin:0; font-size:1.1em; color:#555; margin-bottom:10px; text-align:center; }
-canvas { width: 80px !important; height: 80px !important; margin-bottom:5px; }
-.valor {
-  font-size: 0.9em;
-  font-weight: bold;
-  color: #333;
-  text-align:center;
-  margin-bottom:5px;
-}
-.alerta {
-  background-color:#ff4d4d;
-  color:#fff;
-  font-weight:bold;
-  padding:5px 10px;
-  border-radius:8px;
-  display:none;
-  text-align:center;
-  width:100%;
-  margin-top:5px;
-}
-</style>
+  <meta charset="UTF-8">
+  <title>Dashboard Termitas</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <style>
+    body {
+      background-color: #e0e0e0;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
+    }
+    h1 {
+      text-align: center;
+      color: #333;
+      margin-bottom: 30px;
+    }
+    .grid-sondas {
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      gap: 20px;
+      justify-items: center;
+      margin-bottom: 40px;
+    }
+    .sonda {
+      background-color: #fff;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+      padding: 15px;
+      width: 180px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      transition: transform 0.3s, border 0.3s;
+      cursor: pointer;
+    }
+    .sonda:hover {
+      transform: translateY(-5px);
+    }
+    .sonda.seleccionada {
+      border: 3px solid #007bff;
+    }
+    .sonda h2 {
+      margin: 0;
+      font-size: 1.1em;
+      color: #555;
+      margin-bottom: 10px;
+    }
+    .mini-grafico {
+      width: 80px;
+      height: 80px;
+      margin-bottom: 5px;
+    }
+    .variables {
+      font-size: 0.85em;
+      color: #333;
+      margin-bottom: 5px;
+      text-align: center;
+    }
+    .alerta {
+      background-color: #ff4d4d;
+      color: #fff;
+      font-weight: bold;
+      padding: 5px 10px;
+      border-radius: 8px;
+      display: none;
+      text-align: center;
+      width: 100%;
+      margin-top: 5px;
+    }
+    @media(max-width: 1200px) { .grid-sondas { grid-template-columns: repeat(4, 1fr); } }
+    @media(max-width: 992px) { .grid-sondas { grid-template-columns: repeat(3, 1fr); } }
+    @media(max-width: 768px) { .grid-sondas { grid-template-columns: repeat(2, 1fr); } }
+    @media(max-width: 480px) { .grid-sondas { grid-template-columns: 1fr; } }
+  </style>
 </head>
 <body>
+  <h1>Dashboard Termitas</h1>
+  <div class="grid-sondas" id="gridSondas"></div>
 
-<h1>Dashboard Termitas</h1>
-<div id="bloques-container"></div>
+  <script>
+    const totalSondas = 20;
+    const grid = document.getElementById('gridSondas');
+    let sondaSeleccionada = null;
+    const chartsTemp = [];
+    const chartsHum = [];
 
-<script>
-const totalSondas = 20;
-const sondasPorBloque = 5;
-const bloquesContainer = document.getElementById('bloques-container');
-const chartsTemp = [];
-const chartsHum = [];
-let sondaSeleccionada = null;
+    // Valores de prueba iniciales
+    const valoresPrueba = Array.from({length: totalSondas}, (_, i) => ({
+      Temperatura_C: Math.floor(Math.random() * 10 + 20), // 20-29°C
+      Humedad_pct: Math.floor(Math.random() * 30 + 40),   // 40-70%
+      Distancia_mm: Math.floor(Math.random() * 20 + 25)   // 25-44 mm
+    }));
 
-// Valores de prueba si data.json no existe
-const valoresPrueba = Array.from({length: totalSondas}, (_, i) => ({
-  Temperatura_C: Math.floor(Math.random()*10+20), // 20-29°C
-  Humedad_pct: Math.floor(Math.random()*30+40),   // 40-70%
-  Distancia_mm: Math.floor(Math.random()*20+25)   // 25-44 mm
-}));
+    // Crear bloques de sondas
+    for(let i = 1; i <= totalSondas; i++) {
+      const sondaDiv = document.createElement('div');
+      sondaDiv.classList.add('sonda');
+      sondaDiv.id = `sonda-${i}`;
+      sondaDiv.innerHTML = `
+        <h2>Sonda ${i}</h2>
+        <canvas id="tempChart-${i}" class="mini-grafico"></canvas>
+        <canvas id="humChart-${i}" class="mini-grafico"></canvas>
+        <div class="variables">
+          Distancia: <span id="dist-${i}">${valoresPrueba[i-1].Distancia_mm}</span> mm
+        </div>
+        <div class="alerta" id="alerta-${i}" style="display: ${valoresPrueba[i-1].Distancia_mm > 30 ? 'block' : 'none'}">
+          ¡Alerta de termitas!
+        </div>
+      `;
+      // Selección de bloque
+      sondaDiv.addEventListener('click', () => {
+        if(sondaSeleccionada) sondaSeleccionada.classList.remove('seleccionada');
+        sondaDiv.classList.add('seleccionada');
+        sondaSeleccionada = sondaDiv;
+      });
+      grid.appendChild(sondaDiv);
 
-// Crear bloques
-for(let b=0; b<totalSondas/sondasPorBloque; b++){
-  const bloqueDiv = document.createElement('div');
-  bloqueDiv.classList.add('bloque');
+      // Inicializar gráficos
+      const ctxTemp = document.getElementById(`tempChart-${i}`).getContext('2d');
+      const tempChart = new Chart(ctxTemp, {
+        type: 'doughnut',
+        data: {
+          labels: ['Temp','Resto'],
+          datasets: [{
+            data: [valoresPrueba[i-1].Temperatura_C, 50],
+            backgroundColor: ['#ff6384','#eee'],
+            borderWidth:0
+          }]
+        },
+        options: { cutout: '70%', plugins:{legend:{display:false}}, rotation:-90, circumference:180 }
+      });
+      chartsTemp.push(tempChart);
 
-  for(let i=1; i<=sondasPorBloque; i++){
-    const sondaIndex = b*sondasPorBloque + i;
-    const sondaDiv = document.createElement('div');
-    sondaDiv.classList.add('sonda');
-    sondaDiv.id = `sonda-${sondaIndex}`;
-    sondaDiv.innerHTML = `
-      <h2>Sonda ${sondaIndex}</h2>
-      <canvas id="tempChart-${sondaIndex}"></canvas>
-      <div class="valor" id="valorTemp-${sondaIndex}">${valoresPrueba[sondaIndex-1].Temperatura_C}°C</div>
-      <canvas id="humChart-${sondaIndex}"></canvas>
-      <div class="valor" id="valorHum-${sondaIndex}">${valoresPrueba[sondaIndex-1].Humedad_pct}%</div>
-      <div class="alerta" id="alerta-${sondaIndex}" style="display:${valoresPrueba[sondaIndex-1].Distancia_mm>30?'block':'none'}">
-        ¡Alerta de termitas!
-      </div>
-    `;
-    // Selección de bloque
-    sondaDiv.addEventListener('click', ()=>{
-      if(sondaSeleccionada) sondaSeleccionada.classList.remove('seleccionada');
-      sondaDiv.classList.add('seleccionada');
-      sondaSeleccionada = sondaDiv;
-    });
-    bloqueDiv.appendChild(sondaDiv);
+      const ctxHum = document.getElementById(`humChart-${i}`).getContext('2d');
+      const humChart = new Chart(ctxHum, {
+        type: 'doughnut',
+        data: {
+          labels: ['Hum','Resto'],
+          datasets: [{
+            data: [valoresPrueba[i-1].Humedad_pct, 100 - valoresPrueba[i-1].Humedad_pct],
+            backgroundColor: ['#36a2eb','#eee'],
+            borderWidth:0
+          }]
+        },
+        options: { cutout: '70%', plugins:{legend:{display:false}}, rotation:-90, circumference:180 }
+      });
+      chartsHum.push(humChart);
+    }
 
-    // Gráfico Temperatura: degradado verde→amarillo→rojo
-    const ctxTemp = document.getElementById(`tempChart-${sondaIndex}`).getContext('2d');
-    const gradTemp = ctxTemp.createLinearGradient(0,0,0,80);
-    gradTemp.addColorStop(0,'#00ff00');
-    gradTemp.addColorStop(0.5,'#ffff00');
-    gradTemp.addColorStop(1,'#ff0000');
-    const tempChart = new Chart(ctxTemp,{
-      type:'doughnut',
-      data:{
-        labels:['Temp','Resto'],
-        datasets:[{data:[valoresPrueba[sondaIndex-1].Temperatura_C,50], backgroundColor:[gradTemp,'#eee'], borderWidth:0}]
-      },
-      options:{cutout:'70%', plugins:{legend:{display:false}}, rotation:-90, circumference:180}
-    });
-    chartsTemp.push(tempChart);
+    // Actualizar datos desde data.json
+    async function actualizarDatos() {
+      try {
+        const response = await fetch('data/data.json');
+        const data = await response.json();
+        if(!data.sondas) return;
 
-    // Gráfico Humedad celeste
-    const ctxHum = document.getElementById(`humChart-${sondaIndex}`).getContext('2d');
-    const humChart = new Chart(ctxHum,{
-      type:'doughnut',
-      data:{
-        labels:['Hum','Resto'],
-        datasets:[{data:[valoresPrueba[sondaIndex-1].Humedad_pct,100-valoresPrueba[sondaIndex-1].Humedad_pct], backgroundColor:['#36cce7','#eee'], borderWidth:0}]
-      },
-      options:{cutout:'70%', plugins:{legend:{display:false}}, rotation:-90, circumference:180}
-    });
-    chartsHum.push(humChart);
-  }
-  bloquesContainer.appendChild(bloqueDiv);
-}
+        data.sondas.forEach((sonda, index) => {
+          const i = index;
+          const temp = sonda.Temperatura_C ?? valoresPrueba[i].Temperatura_C;
+          const hum = sonda.Humedad_pct ?? valoresPrueba[i].Humedad_pct;
+          const dist = sonda.Distancia_mm ?? valoresPrueba[i].Distancia_mm;
 
-// Función de actualización
-async function actualizarDatos(){
-  try{
-    const response = await fetch('data/data.json');
-    const data = await response.json();
-    if(!data.sondas) return;
+          // Actualizar gráficos
+          chartsTemp[i].data.datasets[0].data[0] = temp;
+          chartsTemp[i].data.datasets[0].data[1] = 50;
+          chartsTemp[i].update();
 
-    data.sondas.forEach((sonda,index)=>{
-      if(!sonda) return;
-      const temp = sonda.Temperatura_C ?? valoresPrueba[index].Temperatura_C;
-      const hum = sonda.Humedad_pct ?? valoresPrueba[index].Humedad_pct;
-      const dist = sonda.Distancia_mm ?? valoresPrueba[index].Distancia_mm;
+          chartsHum[i].data.datasets[0].data[0] = hum;
+          chartsHum[i].data.datasets[0].data[1] = 100 - hum;
+          chartsHum[i].update();
 
-      chartsTemp[index].data.datasets[0].data[0] = temp;
-      chartsTemp[index].update();
-      document.getElementById(`valorTemp-${index+1}`).innerText = temp+'°C';
+          document.getElementById(`dist-${i+1}`).innerText = dist;
 
-      chartsHum[index].data.datasets[0].data[0] = hum;
-      chartsHum[index].update();
-      document.getElementById(`valorHum-${index+1}`).innerText = hum+'%';
+          // Alertas
+          const alertaDiv = document.getElementById(`alerta-${i+1}`);
+          alertaDiv.style.display = dist > 30 ? 'block' : 'none';
+        });
+      } catch (error) {
+        console.warn('No se pudo leer data.json, usando valores de prueba');
+      }
+    }
 
-      const alertaDiv = document.getElementById(`alerta-${index+1}`);
-      alertaDiv.style.display = dist>30?'block':'none';
-    });
-  }catch(e){ 
-    console.warn('No se pudo leer data.json, usando valores de prueba'); 
-  }
-}
-
-// Actualiza cada 10s
-setInterval(actualizarDatos,10000);
-</script>
-
+    setInterval(actualizarDatos, 10000);
+  </script>
 </body>
 </html>
