--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Dashboard Termitas</title>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
 <style>
 body {
   background-color: #e0e0e0;
@@ -56,112 +56,111 @@ canvas { width: 80px !important; height: 80px !important; margin-bottom:5px; }
 </style>
 </head>
 <body>
-
 <h1>Dashboard Termitas</h1>
 <div id="bloques-container"></div>
 
-<script>
-const totalSondas = 20;
-const sondasPorBloque = 5;
-const bloquesContainer = document.getElementById('bloques-container');
-let sondaSeleccionada = null;
-const chartsTemp = [];
-const chartsHum = [];
+<script defer>
+document.addEventListener('DOMContentLoaded', function(){
+  const totalSondas = 20;
+  const sondasPorBloque = 5;
+  const bloquesContainer = document.getElementById('bloques-container');
+  let sondaSeleccionada = null;
+  const chartsTemp = [];
+  const chartsHum = [];
 
-// Valores de prueba si data.json no existe
-const valoresPrueba = Array.from({length: totalSondas}, (_, i) => ({
-  Temperatura_C: Math.floor(Math.random()*10+20), // 20-29°C
-  Humedad_pct: Math.floor(Math.random()*30+40),   // 40-70%
-  Distancia_mm: Math.floor(Math.random()*20+25)   // 25-44 mm
-}));
+  const valoresPrueba = Array.from({length: totalSondas}, (_, i) => ({
+    Temperatura_C: Math.floor(Math.random()*10+20), // 20-29°C
+    Humedad_pct: Math.floor(Math.random()*30+40),   // 40-70%
+    Distancia_mm: Math.floor(Math.random()*20+25)   // 25-44 mm
+  }));
 
-// Crear bloques
-for(let b=0; b<totalSondas/sondasPorBloque; b++){
-  const bloqueDiv = document.createElement('div');
-  bloqueDiv.classList.add('bloque');
+  for(let b=0; b<totalSondas/sondasPorBloque; b++){
+    const bloqueDiv = document.createElement('div');
+    bloqueDiv.classList.add('bloque');
 
-  for(let i=1; i<=sondasPorBloque; i++){
-    const sondaIndex = b*sondasPorBloque + i;
-    const sondaDiv = document.createElement('div');
-    sondaDiv.classList.add('sonda');
-    sondaDiv.id = `sonda-${sondaIndex}`;
-    sondaDiv.innerHTML = `
-      <h2>Sonda ${sondaIndex}</h2>
-      <canvas id="tempChart-${sondaIndex}"></canvas>
-      <div class="valor" id="valorTemp-${sondaIndex}">${valoresPrueba[sondaIndex-1].Temperatura_C}°C</div>
-      <canvas id="humChart-${sondaIndex}"></canvas>
-      <div class="valor" id="valorHum-${sondaIndex}">${valoresPrueba[sondaIndex-1].Humedad_pct}%</div>
-      <div class="valor">Distancia: <span id="dist-${sondaIndex}">${valoresPrueba[sondaIndex-1].Distancia_mm}</span> mm</div>
-      <div class="alerta" id="alerta-${sondaIndex}" style="display:${valoresPrueba[sondaIndex-1].Distancia_mm>30?'block':'none'}">
-        ¡Alerta de termitas!
-      </div>
-    `;
-    // Selección de bloque
-    sondaDiv.addEventListener('click', ()=>{
-      if(sondaSeleccionada) sondaSeleccionada.classList.remove('seleccionada');
-      sondaDiv.classList.add('seleccionada');
-      sondaSeleccionada = sondaDiv;
-    });
-    bloqueDiv.appendChild(sondaDiv);
+    for(let i=1; i<=sondasPorBloque; i++){
+      const sondaIndex = b*sondasPorBloque + i;
+      const sondaDiv = document.createElement('div');
+      sondaDiv.classList.add('sonda');
+      sondaDiv.id = `sonda-${sondaIndex}`;
+      sondaDiv.innerHTML = `
+        <h2>Sonda ${sondaIndex}</h2>
+        <canvas id="tempChart-${sondaIndex}"></canvas>
+        <div class="valor" id="valorTemp-${sondaIndex}">${valoresPrueba[sondaIndex-1].Temperatura_C}°C</div>
+        <canvas id="humChart-${sondaIndex}"></canvas>
+        <div class="valor" id="valorHum-${sondaIndex}">${valoresPrueba[sondaIndex-1].Humedad_pct}%</div>
+        <div class="valor">Distancia: <span id="dist-${sondaIndex}">${valoresPrueba[sondaIndex-1].Distancia_mm}</span> mm</div>
+        <div class="alerta" id="alerta-${sondaIndex}" style="display:${valoresPrueba[sondaIndex-1].Distancia_mm>30?'block':'none'}">
+          ¡Alerta de termitas!
+        </div>
+      `;
 
-    // Gráfico Temperatura: degradado verde→amarillo→rojo
-    const ctxTemp = document.getElementById(`tempChart-${sondaIndex}`).getContext('2d');
-    const gradTemp = ctxTemp.createLinearGradient(0,0,0,80);
-    gradTemp.addColorStop(0,'#00ff00');
-    gradTemp.addColorStop(0.5,'#ffff00');
-    gradTemp.addColorStop(1,'#ff0000');
-    const tempChart = new Chart(ctxTemp,{
-      type:'doughnut',
-      data:{ labels:['Temp','Resto'], datasets:[{data:[valoresPrueba[sondaIndex-1].Temperatura_C,50], backgroundColor:[gradTemp,'#eee'], borderWidth:0}] },
-      options:{ cutout:'70%', plugins:{legend:{display:false}}, rotation:-90, circumference:180 }
-    });
-    chartsTemp.push(tempChart);
+      sondaDiv.addEventListener('click', ()=>{
+        if(sondaSeleccionada) sondaSeleccionada.classList.remove('seleccionada');
+        sondaDiv.classList.add('seleccionada');
+        sondaSeleccionada = sondaDiv;
+      });
+      bloqueDiv.appendChild(sondaDiv);
 
-    // Gráfico Humedad celeste
-    const ctxHum = document.getElementById(`humChart-${sondaIndex}`).getContext('2d');
-    const humChart = new Chart(ctxHum,{
-      type:'doughnut',
-      data:{ labels:['Hum','Resto'], datasets:[{data:[valoresPrueba[sondaIndex-1].Humedad_pct,100-valoresPrueba[sondaIndex-1].Humedad_pct], backgroundColor:['#36cce7','#eee'], borderWidth:0}] },
-      options:{ cutout:'70%', plugins:{legend:{display:false}}, rotation:-90, circumference:180 }
-    });
-    chartsHum.push(humChart);
+      const tempCanvas = document.getElementById(`tempChart-${sondaIndex}`);
+      const humCanvas = document.getElementById(`humChart-${sondaIndex}`);
+      if(!tempCanvas || !humCanvas) continue;
+
+      const ctxTemp = tempCanvas.getContext('2d');
+      const gradTemp = ctxTemp.createLinearGradient(0,0,0,80);
+      gradTemp.addColorStop(0,'#00ff00');
+      gradTemp.addColorStop(0.5,'#ffff00');
+      gradTemp.addColorStop(1,'#ff0000');
+      const tempChart = new Chart(ctxTemp,{
+        type:'doughnut',
+        data:{ labels:['Temp','Resto'], datasets:[{data:[valoresPrueba[sondaIndex-1].Temperatura_C,50], backgroundColor:[gradTemp,'#eee'], borderWidth:0}] },
+        options:{ cutout:'70%', plugins:{legend:{display:false}}, rotation:-90, circumference:180 }
+      });
+      chartsTemp.push(tempChart);
+
+      const ctxHum = humCanvas.getContext('2d');
+      const humChart = new Chart(ctxHum,{
+        type:'doughnut',
+        data:{ labels:['Hum','Resto'], datasets:[{data:[valoresPrueba[sondaIndex-1].Humedad_pct,100-valoresPrueba[sondaIndex-1].Humedad_pct], backgroundColor:['#36cce7','#eee'], borderWidth:0}] },
+        options:{ cutout:'70%', plugins:{legend:{display:false}}, rotation:-90, circumference:180 }
+      });
+      chartsHum.push(humChart);
+    }
+    bloquesContainer.appendChild(bloqueDiv);
   }
-  bloquesContainer.appendChild(bloqueDiv);
-}
 
-// Actualizar datos desde data.json
-async function actualizarDatos(){
-  try{
-    const response = await fetch('data/data.json');
-    const data = await response.json();
-    if(!data.sondas) return;
+  async function actualizarDatos(){
+    try{
+      const response = await fetch('data/data.json');
+      const data = await response.json();
+      if(!data.sondas) return;
 
-    data.sondas.forEach((sonda,index)=>{
-      if(!sonda) return;
-      const temp = sonda.Temperatura_C ?? valoresPrueba[index].Temperatura_C;
-      const hum = sonda.Humedad_pct ?? valoresPrueba[index].Humedad_pct;
-      const dist = sonda.Distancia_mm ?? valoresPrueba[index].Distancia_mm;
+      data.sondas.forEach((sonda,index)=>{
+        if(!sonda) return;
+        const temp = sonda.Temperatura_C ?? valoresPrueba[index].Temperatura_C;
+        const hum = sonda.Humedad_pct ?? valoresPrueba[index].Humedad_pct;
+        const dist = sonda.Distancia_mm ?? valoresPrueba[index].Distancia_mm;
 
-      chartsTemp[index].data.datasets[0].data[0] = temp;
-      chartsTemp[index].update();
-      document.getElementById(`valorTemp-${index+1}`).innerText = temp+'°C';
+        chartsTemp[index].data.datasets[0].data[0] = temp;
+        chartsTemp[index].update();
+        document.getElementById(`valorTemp-${index+1}`).innerText = temp+'°C';
 
-      chartsHum[index].data.datasets[0].data[0] = hum;
-      chartsHum[index].update();
-      document.getElementById(`valorHum-${index+1}`).innerText = hum+'%';
+        chartsHum[index].data.datasets[0].data[0] = hum;
+        chartsHum[index].update();
+        document.getElementById(`valorHum-${index+1}`).innerText = hum+'%';
 
-      document.getElementById(`dist-${index+1}`).innerText = dist;
+        document.getElementById(`dist-${index+1}`).innerText = dist;
 
-      const alertaDiv = document.getElementById(`alerta-${index+1}`);
-      alertaDiv.style.display = dist>30?'block':'none';
-    });
-  }catch(e){
-    console.warn('No se pudo leer data.json, usando valores de prueba');
+        const alertaDiv = document.getElementById(`alerta-${index+1}`);
+        alertaDiv.style.display = dist>30?'block':'none';
+      });
+    }catch(e){
+      console.warn('No se pudo leer data.json, usando valores de prueba');
+    }
   }
-}
 
-setInterval(actualizarDatos,10000);
+  setInterval(actualizarDatos,10000);
+});
 </script>
-
 </body>
 </html>
